--- a/src/Kuntur/MW.KUNTUR.Presentation.WebApp/MW.KUNTUR.Presentation.WebApp.csproj
+++ b/src/Kuntur/MW.KUNTUR.Presentation.WebApp/MW.KUNTUR.Presentation.WebApp.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Bio\MW.KUNTUR.Bio.Application\MW.KUNTUR.Bio.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
