add test dbcontext for bio

--- a/src/Kuntur/MW.KUNTUR.Presentation.WebApp/appsettings.Development.json
+++ b/src/Kuntur/MW.KUNTUR.Presentation.WebApp/appsettings.Development.json
@@ -6,8 +6,11 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "BioCosmosDb": {
-        "EndPoint": "",
-        "PrimaryKey": ""
+    "CosmosDb": {
+        "Bio": {
+            "EndPoint": "",
+            "PrimaryKey": "",
+            "Database": "Kuntur"
+        }
     }
 }
